# V2MP

./: .gitignore  LICENSE  README.md  app.js  index.html  pyproject.toml  requirements.txt  style.css
tests/: conftest.py  test_cli.py  test_config.py  test_converter_integration.py  test_jpeg.py  test_metadata.py  test_validator.py  test_xmp.py
v2mp/: __init__.py  __main__.py  cli.py  config.py  converter.py  ffmpeg.py  jpeg.py  main.py  metadata.py  utils.py  validator.py  xmp.py
